# Amnesia-Hook

./: CMakeLists.txt  README.md
include/: Amhk.h
include/imgui/: imgui_impl_win32.h
src/: Amhook.cpp  main.cpp
